fix(cart): Corrected Navbar alignment on mobile

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -161,7 +161,7 @@
         width: 15px;
     }
     .navbar-menu{
-        /* display: none; */
+        display: none;
     }
     .navbar-right{
         gap: 20px;
